# flight-club-data

./: .env.example  .gitignore  Dockerfile.consumer  Dockerfile.dagster  Dockerfile.metabase  Dockerfile.producer  Helmfile.yaml  README.md  Taskfile.yml  aviation_pipeline.py  consumer.py  producer.py  pyproject.toml  requirements-consumer.txt  requirements-dagster.txt  requirements-producer.txt  requirements.txt  workspace.yaml
charts/consumer/: Chart.yaml  values.yaml
charts/consumer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
charts/dagster/: Chart.yaml  values.yaml
charts/dagster/templates/: codeserver.yaml  configmap.yaml  daemon.yaml  postgres.yaml  pvc.yaml  webserver.yaml
charts/infrastructure/: Chart.yaml  values.yaml
charts/kafka/: Chart.yaml  values.yaml
charts/kafka/templates/: service.yaml  statefulset.yaml
charts/metabase/: Chart.yaml  values.yaml
charts/metabase/templates/: deployment.yaml  pvc.yaml
charts/producer/: Chart.yaml  values.yaml
charts/producer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
charts/schema-registry/: Chart.yaml  values.yaml
charts/schema-registry/templates/: deployment.yaml
charts/storage/: Chart.yaml  values.yaml
charts/storage/templates/: persistentvolumes.yaml
config/: dagster.yaml
